loopfor.LoopFor.scala.error
Compilation error:
LoopFor:2: error: not found: value isOverBaggel
while (!isOverBaggel()) {
        ^LoopFor:6: error: not found: value pickupBaggel
pickupBaggel()
^