loopfor.LoopFor.scala.code
var step = 0
while (!isOverBaggel()) {
  forward()
  step+=1
}
pickupBaggel()
for (stepper <- 1 to step) {
  backward()
}